select/deselect funtionality

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     <div class="form-container">
         <button class="items-button">Items</button>
         <form method="post" action="" class="build-form">
-            <input type="text" class="item-input" placeholder="Item 1">
-            <input type="text" class="item-input" placeholder="Item 2">
-            <input type="text" class="item-input" placeholder="Item 3">
-            <input type="text" class="item-input" placeholder="Item 4">
-            <input type="text" class="item-input" placeholder="Item 5">
-            <input type="text" class="item-input" placeholder="Item 6">
+            <input type="text" data-attr="1" class="item-input" placeholder="Item 1">
+            <input type="text" data-attr="2" class="item-input" placeholder="Item 2">
+            <input type="text" data-attr="3" class="item-input" placeholder="Item 3">
+            <input type="text" data-attr="4" class="item-input" placeholder="Item 4">
+            <input type="text" data-attr="5" class="item-input" placeholder="Item 5">
+            <input type="text" data-attr="6" class="item-input" placeholder="Item 6">
         </form>
         <button class="save-button">Save</button>
     </div>
