added ajax request to the client

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
             <button class="defense-button">Defense</button>
         </div>
         <form method="post" action="" class="build-form">
-            <input type="text" data-attr="1" class="item-input" placeholder="Item 1">
-            <input type="text" data-attr="2" class="item-input" placeholder="Item 2">
-            <input type="text" data-attr="3" class="item-input" placeholder="Item 3">
-            <input type="text" data-attr="4" class="item-input" placeholder="Item 4">
-            <input type="text" data-attr="5" class="item-input" placeholder="Item 5">
-            <input type="text" data-attr="6" class="item-input" placeholder="Item 6">
+            <input id="item1" type="text" data-attr="1" class="item-input" placeholder="Item 1">
+            <input id="item2" type="text" data-attr="2" class="item-input" placeholder="Item 2">
+            <input id="item3" type="text" data-attr="3" class="item-input" placeholder="Item 3">
+            <input id="item4" type="text" data-attr="4" class="item-input" placeholder="Item 4">
+            <input id="item5" type="text" data-attr="5" class="item-input" placeholder="Item 5">
+            <input id="item6" type="text" data-attr="6" class="item-input" placeholder="Item 6">
         </form>
         <button class="save-button">Save</button>
     </div>
