added in POST request for builds

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <h2>Smite Builder</h2>
-            <ul>My Builds</ul>
+            <ul class="myBuilds">My Builds</ul>
             <ul id="logInBtn">Log in</ul>
         </nav>
     </header>
@@ -30,10 +30,12 @@
         </form>
         <button class="save-button">Save</button>
     </div>
+    <section class="builds-section">
+
+    </section>
     <section class="items-section">
         <ul class="items-container">
         </ul>
-
     </section>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
