created post and get endpoints for builds collection

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
         <button class="save-button">Save</button>
     </div>
     <section class="builds-section">
+        <ul class="builds-container">
 
+        </ul>
     </section>
     <section class="items-section">
         <ul class="items-container">
